🚚 move image files

--- a/presentation/slide-22-resources.html
+++ b/presentation/slide-22-resources.html
@@ -20,27 +20,27 @@
                 <h2>Resources</h2>
                 <div class="resources-grid">
                     <div class="resource-item fragment">
-                        <img src="qr-github-repo.png" alt="GitHub Repository QR Code" class="qr-code">
+                        <img src="images/qr-github-repo.png" alt="GitHub Repository QR Code" class="qr-code">
                         <p><strong>Example Code</strong><br>
                         <code>github.com/ryancheley/django-db-comments-patient-risk</code></p>
                     </div>
                     <div class="resource-item fragment">
-                        <img src="qr-django-field-docs.png" alt="Django Field Docs QR Code" class="qr-code">
+                        <img src="images/qr-django-field-docs.png" alt="Django Field Docs QR Code" class="qr-code">
                         <p><strong>Field Documentation</strong><br>
                         Django <code>db_comment</code> docs</p>
                     </div>
                     <div class="resource-item fragment">
-                        <img src="qr-django-table-docs.png" alt="Django Table Docs QR Code" class="qr-code">
+                        <img src="images/qr-django-table-docs.png" alt="Django Table Docs QR Code" class="qr-code">
                         <p><strong>Table Documentation</strong><br>
                         Django <code>db_table_comment</code> docs</p>
                     </div>
                     <div class="resource-item fragment">
-                        <img src="qr-django-ticket.png" alt="Django Ticket QR Code" class="qr-code">
+                        <img src="images/qr-django-ticket.png" alt="Django Ticket QR Code" class="qr-code">
                         <p><strong>Original Request</strong><br>
                         Django Ticket #18468</p>
                     </div>
                     <div class="resource-item fragment">
-                        <img src="qr-django-release-notes.png" alt="Django Release Notes QR Code" class="qr-code">
+                        <img src="images/qr-django-release-notes.png" alt="Django Release Notes QR Code" class="qr-code">
                         <p><strong>Release Notes</strong><br>
                         Django 4.2 feature announcement</p>
                     </div>
