👔 clean up from round 1 notes

--- a/presentation/slide-03-cross-team-confusion.html
+++ b/presentation/slide-03-cross-team-confusion.html
@@ -19,7 +19,7 @@
                 <h2>The Cross-Team Confusion</h2>
                 <div class="slack-thread">
                     <div class="slack-message">
-                        <span class="slack-user">@developer</span>: Just pushed new field `chads_score` to PatientRisk model
+                        <span class="slack-user">@web-developer</span>: Just pushed new field `chads_score` to PatientRisk model
                     </div>
                     <div class="slack-message bullet-item" data-index="0" style="opacity: 0;">
                         <span class="slack-user">@etl-dev</span>: Need to add this to risk dimension - what does it calculate?
@@ -28,7 +28,7 @@
                         <span class="slack-user">@report-dev</span>: Also need this for dashboard - waiting on specs
                     </div>
                     <div class="slack-message bullet-item" data-index="2" style="opacity: 0;">
-                        <span class="slack-user">@developer</span>: *30 min later* CHA2DS2-VASc stroke risk score
+                        <span class="slack-user">@web-developer</span>: *2 hours later* CHA2DS2-VASc stroke risk score
                     </div>
                 </div>
                 <div class="pain-point bullet-item" data-index="3" style="opacity: 0;">
