--- a/presentation/slide-04-real-cost.html
+++ b/presentation/slide-04-real-cost.html
@@ -18,7 +18,7 @@
             <section>
                 <h2>The Real Cost</h2>
                 <ul>
-                    <li class="bullet-item" data-index="0" style="opacity: 0;">ETL pipeline delays waiting for field clarification</li>
+                    <li class="bullet-item" data-index="0" style="opacity: 0;">Delays in ETL pipeline development waiting for field clarification</li>
                     <li class="bullet-item" data-index="1" style="opacity: 0;">Report development blocked on Dashboard creation</li>
                     <li class="bullet-item" data-index="2" style="opacity: 0;">Developer productivity loss across teams</li>
                     <li class="bullet-item" data-index="3" style="opacity: 0;">Regulatory compliance challenges</li>
