--- a/presentation/slide-08-different-audiences.html
+++ b/presentation/slide-08-different-audiences.html
@@ -34,7 +34,7 @@
                             <td class="bullet-item negative" data-index="3" style="opacity: 0;">✗ No</td>
                         </tr>
                         <tr>
-                            <td class="bullet-item" data-index="4" style="opacity: 0;">Developers</td>
+                            <td class="bullet-item" data-index="4" style="opacity: 0;">Web Developers</td>
                             <td class="bullet-item" data-index="5" style="opacity: 0;">Field purpose</td>
                             <td class="bullet-item negative" data-index="6" style="opacity: 0;">✗ Limited</td>
                             <td class="bullet-item positive" data-index="7" style="opacity: 0;">✓ Yes</td>
@@ -50,12 +50,6 @@
                             <td class="bullet-item" data-index="13" style="opacity: 0;">Field definitions</td>
                             <td class="bullet-item negative" data-index="14" style="opacity: 0;">✗ No</td>
                             <td class="bullet-item positive" data-index="15" style="opacity: 0;">✓ Yes</td>
-                        </tr>
-                        <tr>
-                            <td class="bullet-item" data-index="16" style="opacity: 0;">Data Analysts</td>
-                            <td class="bullet-item" data-index="17" style="opacity: 0;">DB context</td>
-                            <td class="bullet-item negative" data-index="18" style="opacity: 0;">✗ No</td>
-                            <td class="bullet-item positive" data-index="19" style="opacity: 0;">✓ Yes</td>
                         </tr>
                     </tbody>
                 </table>
@@ -99,7 +93,7 @@
 
         // Custom bullet point navigation for table cells
         let currentBulletIndex = -1;
-        const totalBullets = 20; // 5 rows × 4 columns
+        const totalBullets = 16; // 4 rows × 4 columns
 
         function showNextBullet() {
             if (currentBulletIndex < totalBullets - 1) {
