--- a/presentation/slide-20-dba-view.html
+++ b/presentation/slide-20-dba-view.html
@@ -17,15 +17,23 @@
         <div class="slides">
 
             <section data-timing="2min">
-                <h2>Database Administrator View</h2>
-                <div class="db-schema bullet-item" data-index="0" style="opacity: 0;">
-                    <h4>pgAdmin Column Info</h4>
-                    <p><strong>Table:</strong> patient_risk_patientriskassessment</p>
-                    <p><strong>Column:</strong> chads_score (<em>integer</em>)</p>
-                    <p><strong>Comment:</strong> CHA2DS2-VASc stroke risk (0-9). ≥2 indicates anticoagulation consideration. Per 2010 ESC Guidelines.</p>
+                <h2>Database Administrator View - Side by Side</h2>
+                <div class="side-by-side-container">
+                    <div class="side-column bullet-item" data-index="0" style="opacity: 0;">
+                        <h3>Django Model</h3>
+                        <pre><code class="python">chads_score = models.IntegerField(
+    db_comment="CHA2DS2-VASc stroke risk (0-9).
+               ≥2 indicates anticoagulation
+               consideration."
+)</code></pre>
+                    </div>
+                    <div class="side-column bullet-item" data-index="1" style="opacity: 0;">
+                        <h3>PostgreSQL View</h3>
+                        <img src="images/chads_score_with_comment.png" alt="PostgreSQL column with comment" style="max-width: 100%;">
+                    </div>
                 </div>
-                <div class="success-point bullet-item" data-index="1" style="opacity: 0;">
-                    <strong>Impact:</strong> DBAs understand fields without calling developers
+                <div class="success-point bullet-item" data-index="2" style="opacity: 0;">
+                    <strong>Impact:</strong> DBAs see the same documentation directly in their tools
                 </div>
             </section>
 
@@ -68,7 +76,7 @@
 
         // Custom bullet point navigation
         let currentBulletIndex = -1;
-        const totalBullets = 2; // 1 schema + 1 impact point
+        const totalBullets = 3; // 1 django model + 1 postgres view + 1 impact point
 
         function showNextBullet() {
             if (currentBulletIndex < totalBullets - 1) {
