✏️ make presentation easier to start up

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -176,6 +176,7 @@
     <script>
         async function loadSlides() {
             const slideFiles = [
+                '00-start.md',
                 '01-title.md',
                 '02-intro-ryan.md',
                 '03a-cross-team-confusion-part1.md',
