♻️ move javascript to it's own file

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -10,139 +10,6 @@
 </head>
 <body>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-    <script>
-        async function loadSlides() {
-            const slideFiles = [
-                '00-start.md',
-                '01-title.md',
-                '02-intro-ryan.md',
-                '03a-cross-team-confusion-part1.md',
-                '03b-cross-team-confusion-part2.md',
-                '03c-cross-team-confusion-part3.md',
-                '03d-cross-team-confusion-part4.md',
-                '04-real-cost.md',
-                '05-current-state.md',
-                '06-documentation-gap.md',
-                '07-help-text-limitation.md',
-                '08a-table-header.md',
-                '08b-enduser-stakeholder.md',
-                '08c-enduser-needs.md',
-                '08d-enduser-helptext.md',
-                '08e-enduser-dbcomment.md',
-                '08f-developer-stakeholder.md',
-                '08g-developer-needs.md',
-                '08h-developer-helptext.md',
-                '08i-developer-dbcomment.md',
-                '08j-dba-stakeholder.md',
-                '08k-dba-needs.md',
-                '08l-dba-helptext.md',
-                '08m-dba-dbcomment.md',
-                '08n-auditor-stakeholder.md',
-                '08o-auditor-needs.md',
-                '08p-auditor-helptext.md',
-                '08q-auditor-dbcomment.md',
-                '08r-analyst-stakeholder.md',
-                '08s-analyst-needs.md',
-                '08t-analyst-helptext.md',
-                '08u-analyst-dbcomment.md',
-                '09-help-text-falls-short.md',
-                '10-django-db-comment.md',
-                '11-what-this-generates.md',
-                '12-before-mystery-fields.md',
-                '13-after-self-documenting.md',
-                '14-complex-json-example.md',
-                '15-table-level-docs.md',
-                '16-the-migration.md',
-                '17-both-features-together.md',
-                '18a-dba-view-part1.md',
-                '18b-dba-view-part2.md',
-                '18c-dba-view-part3.md',
-                '18d-dba-view-part4.md',
-                '19-start-today.md',
-                '20-resources.md',
-                '21-find-me.md',
-                '22-questions.md',
-                '23-thank-you.md'
-            ];
-
-            let allSlides = '';
-
-            try {
-                for (const file of slideFiles) {
-                    console.log(`Loading ${file}...`);
-                    const response = await fetch(`slides/${file}`);
-
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-
-                    const content = await response.text();
-                    console.log(`Loaded ${file}, content length: ${content.length}`);
-
-                    allSlides += content;
-
-                    if (file !== slideFiles[slideFiles.length - 1]) {
-                        allSlides += '\n\n---\n\n';
-                    }
-                }
-
-
-                console.log(`Total slides content length: ${allSlides.length}`);
-
-                // Initialize remark directly with the content
-                var slideshow = remark.create({
-                    source: allSlides,
-                    ratio: '16:9',
-                    highlightStyle: 'monokai',
-                    highlightLanguage: 'python',
-                    highlightLines: true,
-                    countIncrementalSlides: false,
-                    navigation: {
-                        scroll: false,
-                        touch: true,
-                        click: false
-                    }
-                });
-
-                console.log('Remark slideshow initialized successfully');
-
-                // Add debounced navigation to prevent double-clicks from presentation pointers
-                let lastNavigationTime = 0;
-                const DEBOUNCE_DELAY = 300; // milliseconds
-
-                // Override the default navigation functions with debounced versions
-                const originalNext = slideshow.gotoNextSlide.bind(slideshow);
-                const originalPrev = slideshow.gotoPreviousSlide.bind(slideshow);
-
-                slideshow.gotoNextSlide = function() {
-                    const now = Date.now();
-                    if (now - lastNavigationTime > DEBOUNCE_DELAY) {
-                        lastNavigationTime = now;
-                        originalNext();
-                    }
-                };
-
-                slideshow.gotoPreviousSlide = function() {
-                    const now = Date.now();
-                    if (now - lastNavigationTime > DEBOUNCE_DELAY) {
-                        lastNavigationTime = now;
-                        originalPrev();
-                    }
-                };
-
-            } catch (error) {
-                console.error('Error loading slides:', error);
-
-                // Initialize remark with error message
-                var slideshow = remark.create({
-                    source: `# Error Loading Slides\n\nUnable to load slides: ${error.message}`,
-                    ratio: '16:9'
-                });
-            }
-        }
-
-        // Load slides when page is ready
-        document.addEventListener('DOMContentLoaded', loadSlides);
-    </script>
+    <script src="slides.js"></script>
 </body>
 </html>
