👽 update to allow for lack of wifi

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -3,13 +3,13 @@
 <head>
     <title>Django db_comment: Self-Documenting Healthcare Databases</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic" rel="stylesheet">
+    <link href="fonts/yk" rel="stylesheet">
+    <link href="fonts/ds" rel="stylesheet">
+    <link href="fonts/um" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+    <script src="remark-latest.min.js"></script>
     <script src="slides.js"></script>
 </body>
 </html>
